--- a/CAT2/techovid.css
+++ b/CAT2/techovid.css
@@ -1,7 +1,7 @@
 
     #main
     {
-        /* width:1500px; */
+        width:1530px;
         height:750px;
         border:1px solid black;
         margin:auto;
